--- a/Offers/style.css
+++ b/Offers/style.css
@@ -1,11 +1,12 @@
 * {
   background-color: rgb(5, 5, 5);
 }
-
 .html {
   width: 100%;
-  max-height: 1920px;
-  overflow: hidden;
+  height: 250vh;
+}
+.body {
+  height: 1200vh;
 }
 .text {
   font-size: 48px;
@@ -48,7 +49,7 @@
 .paper > div:hover .paperBio {
   display: block;
   overflow-y: visible;
-  z-index: 2; /* Increase z-index when hovered to appear above other elements */
+  z-index: 2;
 }
 
 .paperBio {
@@ -59,7 +60,7 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   display: none;
-  z-index: 1; /* Set initial z-index value */
+  z-index: 1;
   text-align: center;
 }
 .emblem {
@@ -71,6 +72,19 @@
   transform: translateX(-50%);
   top: 1000px;
   display: flex;
+  flex-direction: row;
+  white-space: nowrap;
+}
+.model {
+  border: 1px solid white;
+  width: 1200px;
+  height: 300px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 1404px;
+  display: flex;
+  overflow-y: hidden;
   flex-direction: row;
   white-space: nowrap;
 }
@@ -123,7 +137,6 @@
   top: -72px;
 }
 .leatherBio,
-.leatherBio,
 .paperBio,
 .emblemBio {
   width: 299px;
@@ -145,6 +158,23 @@
 .emblemBio {
   top: -100px;
 }
+.modelBio {
+  top: -313px;
+  width: 300px;
+  height: 300px;
+  text-align: center;
+  white-space: pre-line;
+  overflow: visible;
+  position: relative;
+  font-size: 12px;
+  color: white;
+  display: none;
+  background: rgba(0, 0, 0, 0.8);
+}
+.modelBio p {
+  width: 250px;
+  color: aqua;
+}
 .paperBio.visible {
   display: block;
 }
@@ -153,7 +183,7 @@
   width: 150px;
   height: 60px;
   position: absolute;
-  bottom: -450px;
+  bottom: -880px;
   margin: 25px;
   background: black;
   right: 20px;
@@ -191,6 +221,40 @@ img:hover {
   cursor: pointer;
 }
 
+.whiteEdition:hover .modelBio,
+.purpleEdition:hover .modelBio,
+.greenEdition:hover .modelBio,
+.beigeEdition:hover .modelBio,
+.redEdition:hover .modelBio,
+.blackEdition:hover .modelBio,
+.redEdition2:hover .modelBio,
+.blackEdition2:hover .modelBio,
+.lilRedEdition:hover .modelBio,
+.purpleBlkEdition:hover .modelBio,
+.greenInvEdition:hover .modelBio,
+.allBlackEdition:hover .modelBio {
+  display: block;
+  transition: all 0.3s ease-in-out;
+  cursor: default;
+}
+.whiteEdition:hover,
+.purpleEdition:hover,
+.greenEdition:hover,
+.beigeEdition:hover,
+.redEdition:hover,
+.blackEdition:hover,
+.redEdition2:hover,
+.blackEdition2:hover,
+.lilRedEdition:hover,
+.purpleBlkEdition:hover,
+.greenInvEdition:hover,
+.allBlackEdition:hover {
+  width: 299px;
+  height: 50px;
+}
+.show {
+  display: block;
+}
 .leatherName {
   font-size: 48px;
   color: aliceblue;
@@ -233,12 +297,100 @@ img:hover {
   font-weight: 300;
   cursor: pointer;
 }
+.modelName {
+  font-size: 48px;
+  color: aliceblue;
+  font-family: "Courier New", Courier, monospace;
+  position: relative;
+  display: flex;
+  top: 976px;
+  width: 300px;
+  left: 200px;
+  justify-content: start;
+  text-transform: uppercase;
+  font-weight: 300;
+  cursor: pointer;
+}
+.galleryBar:hover,
+.homeBar:hover,
+.offersBar:hover,
+.orderBar:hover,
+.bioBar:hover {
+  transform: scale(1.2);
+  transition: all .4s ease-in;
+}
+.menuNav {
+  position: fixed;
+  left: 0;
+  top: 5vh;
+  width: 200px;
+  height: 800px;
+  background: none;
+}
+.menuBar {
+  width: 100px;
+  height: 400px;
+  position: fixed;
+  left: -50px;
+  top: 25vh;
+  border: 1px white solid;
+  display: flex;
+  flex-direction: column;
+  opacity: 0.3;
+  transform: scale(.8);
+}
+.menuBar.moved {
+  left: 0;
+  top: 25vh;
+  transition: all 10s ease-in-out forwards;
+  position: fixed;
+  border: 1px white solid;
+  opacity: 0.99;
+  transform: scale(1);
+  -webkit-animation: bounce-in-left  1.1s both ease;
+  animation: bounce-in-left 1.1s both ease-in-out ease;
+}
+.homeBar {
+  width: 100px;
+  height: 100px;
+  background: url("/assets/HomeBar.png");
+  background-position: center;
+  background-size: cover;
+}
+.galleryBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/galleryBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.bioBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/BioBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.offersBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/OfferBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.orderBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/orderBar.png);
+  background-position: center;
+  background-size: cover;
+}
 .footer {
   font-size: 24px;
   font-family: "Courier New", Courier, monospace;
   color: aliceblue;
   position: absolute;
-  bottom: -490px;
+  bottom: -911px;
   left: 50%;
   transform: translateX(-50%);
   text-transform: uppercase;
@@ -252,5 +404,109 @@ img:hover {
 ::-webkit-scrollbar-thumb {
   background: white;
   border-radius: 15px;
-  width: 10px; /* Adjust the width of the thumb */
+  width: 10px;
+}
+@-webkit-keyframes bounce-in-left {
+  0% {
+    -webkit-transform: translateX(-600px);
+    transform: translateX(-600px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    -webkit-transform: translateX(-68px);
+    transform: translateX(-68px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  72% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  81% {
+    -webkit-transform: translateX(-28px);
+    transform: translateX(-28px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  90% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  95% {
+    -webkit-transform: translateX(-8px);
+    transform: translateX(-8px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+}
+@keyframes bounce-in-left {
+  0% {
+    -webkit-transform: translateX(-600px);
+    transform: translateX(-600px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    -webkit-transform: translateX(-68px);
+    transform: translateX(-68px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  72% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  81% {
+    -webkit-transform: translateX(-28px);
+    transform: translateX(-28px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  90% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  95% {
+    -webkit-transform: translateX(-8px);
+    transform: translateX(-8px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
 }
