--- a/Order/style.css
+++ b/Order/style.css
@@ -93,14 +93,26 @@ img {
   flex-direction: row;
   background: none;
   display: none;
+
 }
-.leatherBio {
+.emblemBio {
+  bottom: -20px;
+  right: 200px;
+}
+.leatherBio{
+  bottom: 0px;
+}
+.paperBio {
+  bottom: -10px;
+}
+.leatherBio,
+.paperBio,
+.emblemBio {
   width: 300px;
   height: 69px;
   background: black;
   color: aliceblue;
   position: absolute;
-  bottom: 0px;
   font-size: 20px;
   color: aliceblue;
   font-family: "Courier New", Courier, monospace;
@@ -139,6 +151,8 @@ img {
 .selected-image {
   border: 1px solid white;
   transition: all 0.8s ease-in-out;
+  display: flex;
+  flex-direction: column;
 }
 .item { 
   width: 1250px;
@@ -164,7 +178,7 @@ img {
   cursor: default;
   background: none;
 }
-form {
+.form {
   border: 1px solid white;
   width: 600px;
   height: 350px;
@@ -176,7 +190,100 @@ form {
   flex-direction: column;
   justify-content: space-between;
   display: none;
+  box-shadow:  0 0 10px 10px white;
+}
+.form.visible {
+  border: 1px solid white;
+  width: 600px;
+  height: 350px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 26vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  display: none;
+}
+.reviewPage{
+  border: 1px solid white;
+  width: 800px;
+  height: 350px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 26vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: white;
+  display: block;
   box-shadow: inset 0 0 10px 1px white;
+}
+.flexing {
+  display: flex;
+}
+.reviewPage.visible {
+  display: block;
+}
+.leatherType,
+.paperType,
+.emblemType,
+.nameInfo,
+.addressInfo,
+.contactInfo {
+  background: none;
+  display: flex;
+  justify-content: center;
+    align-items: center;
+    align-content: flex-start;
+    color: aliceblue;
+    font-size: 26px;
+    height: 42px;
+}
+.reviewPgDiv {
+  width: 95%;
+  flex-direction: column;
+  background: none;
+  justify-content: space-between;
+  height: 300px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 20px;
+  text-align: center;
+  display: none;
+  box-shadow:  0 0 10px 10px solid;
+}
+.reviewPgDiv.flexing {
+  display: flex;
+  cursor: default;
+}
+.order {
+  width: 125px;
+  height: 50px;
+  position: absolute;
+  bottom: -113px;
+  right: -52px;
+  color: antiquewhite;
+  font-size: 28px;
+  border-radius: 10px;
+  display: none;
+  text-transform: capitalize;
+}
+.order.visible {
+  display: block;
+}
+.reviewBtn {
+  width: 125px;
+  height: 50px;
+  position: absolute;
+  bottom: -113px;
+  right: -52px;
+  color: antiquewhite;
+  font-size: 28px;
+  border-radius: 10px;
+  display: none;
 }
 .name,
 .address,
@@ -198,13 +305,78 @@ form {
 }
 .buttonSub {
   width: 125px;
-  height: 50px;
+  height: 500px;
   position: absolute;
   bottom: 250px;
   right: 325px;
   color: antiquewhite;
   font-size: 28px;
   border-radius: 10px;
+  background-color: antiquewhite;
+}
+.menuBar {
+  width: 100px;
+  height: 400px;
+  position: fixed;
+  left: -50px;
+  top: 25vh;
+  border: 1px white solid;
+  display: flex;
+  flex-direction: column;
+  opacity: 0.3;
+}
+.menuBar.moved {
+  left: 0;
+  transition: all 10s ease-in-out forwards;
+  position: fixed;
+  top: 25vh;
+  border: 1px white solid;
+  opacity: 0.99;
+  -webkit-animation: bounce-in-left 1.1s both;
+  animation: bounce-in-left 1.1s both;
+}
+.homeBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/HomeBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.galleryBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/galleryBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.bioBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/BioBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.offersBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/OfferBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.orderBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/orderBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.galleryBar:hover,
+.homeBar:hover,
+.offersBar:hover,
+.orderBar:hover,
+.bioBar:hover {
+  transform: scale(1.2);
+  transition: all .4s ease-in;
 }
 .footer {
   font-size: 24px;
