--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
   left: 0;
   height: 100vh;
   width: 100%;
-
 }
 .offer {
   background: rgb(0, 0, 0);
@@ -112,7 +111,7 @@
   height: 100px;
   border: 1px solid whitesmoke;
   position: absolute;
-  top: 730px;
+  top: 800px;
   left: 50%;
   border-radius: 6px;
   transform: translateX(-50%);
@@ -206,8 +205,7 @@
     0 0 20px rgba(255, 255, 255, 0.3);
   fill: #ffffff;
   opacity: 0;
-    cursor: default;
-
+  cursor: default;
 }
 .cls-2 {
   /*frame*/
@@ -239,6 +237,93 @@ svg {
   animation: blinky 10s cubic-bezier(1, -4, 0, 4) forwards 1s;
   opacity: 0;
 }
+/*thumb*/
+::-webkit-scrollbar {
+  background: black;
+  height: 1px;
+}
+::-webkit-scrollbar-thumb {
+  background: white;
+  border-radius: 10px;
+  width: 1px;
+}
+::-webkit-scrollbar {
+  background: black;
+  width: 2px;
+}
+.menuNav {
+  position: fixed;
+  left: 0;
+  top: 5vh;
+  width: 200px;
+  height: 800px;
+  background: none;
+}
+.menuBar {
+  width: 100px;
+  height: 400px;
+  position: fixed;
+  left: -50px;
+  top: 25vh;
+  border: 1px white solid;
+  display: flex;
+  flex-direction: column;
+  opacity: 0.3;
+}
+.menuBar.moved {
+  left: 0;
+  top: 25vh;
+  transition: all 10s ease-in-out forwards;
+  position: fixed;
+  border: 1px white solid;
+  opacity: 0.99;
+  -webkit-animation: bounce-in-left 1.1s both;
+  animation: bounce-in-left 1.1s both;
+}
+.homeBar {
+  width: 100px;
+  height: 100px;
+  background: url("/assets/HomeBar.png");
+  background-position: center;
+  background-size: cover;
+}
+.galleryBar:hover,
+.homeBar:hover,
+.offersBar:hover,
+.orderBar:hover,
+.bioBar:hover {
+  transform: scale(1.2);
+  transition: all .4s ease-in;
+}
+.galleryBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/galleryBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.bioBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/BioBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.offersBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/OfferBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.orderBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/orderBar.png);
+  background-position: center;
+  background-size: cover;
+}
+
 /*animations*/
 @keyframes intro {
   0% {
@@ -346,6 +431,110 @@ svg {
     opacity: 0.5;
   }
   100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes bounce-in-left {
+  0% {
+    -webkit-transform: translateX(-600px);
+    transform: translateX(-600px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
     opacity: 0;
+  }
+  38% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    -webkit-transform: translateX(-68px);
+    transform: translateX(-68px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  72% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  81% {
+    -webkit-transform: translateX(-28px);
+    transform: translateX(-28px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  90% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  95% {
+    -webkit-transform: translateX(-8px);
+    transform: translateX(-8px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+}
+@keyframes bounce-in-left {
+  0% {
+    -webkit-transform: translateX(-600px);
+    transform: translateX(-600px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+  38% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1;
+  }
+  55% {
+    -webkit-transform: translateX(-68px);
+    transform: translateX(-68px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  72% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  81% {
+    -webkit-transform: translateX(-28px);
+    transform: translateX(-28px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  90% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  95% {
+    -webkit-transform: translateX(-8px);
+    transform: translateX(-8px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
 }
